kustomize/base/grade-submission-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-api
spec:
  type: ClusterIP
  selector:
    app: grade-submission
  ports:
  - name: http
    port: 3000
    targetPort: 3000
